# Micko-bot

./: .breakpoints  README.md  main.py  module.py  pyproject.toml  triggers.py  var.py
data/: triggers.json
src/: alive.py  main.py  module.py  triggers.py  var.py
