[tool.poetry]
name = "repl_python3_Micko-bot"
version = "0.1.0"
description = ""
authors = ["Kusla75 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
fortunate = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
